# aya-btf-maps-experiments

./: .gitignore  .gitmodules  Cargo.toml  README.md
aya-btf-macros/: Cargo.toml
aya-btf-macros/src/: expand.rs  lib.rs
ebpf/aya/: Cargo.toml
ebpf/aya/src/: main.rs
ebpf/fork-ebpf-aya/: Cargo.toml
ebpf/fork-ebpf-aya/src/: main.rs
ebpf/fork-ebpf-libbpf/: .gitignore  Makefile  fork.bpf.c
ebpf/libbpf/: Makefile  fork.bpf.c
fork/: Cargo.toml
fork-common/: Cargo.toml
fork-ebpf/: Cargo.toml
fork-ebpf/.cargo/: config.toml
fork-ebpf/src/: main.rs
fork-libbpf/: Cargo.toml
fork/src/: main.rs
userspace-aya-ebpf-aya/: Cargo.toml
userspace-aya-ebpf-aya/src/: main.rs
userspace-aya-ebpf-libbpf/: Cargo.toml
userspace-aya-ebpf-libbpf/src/: main.rs
userspace-libbpf-ebpf-aya/: Cargo.toml
userspace-libbpf-ebpf-aya/src/: main.rs
userspace-libbpf-ebpf-libbpf/: Cargo.toml
userspace-libbpf-ebpf-libbpf/src/: main.rs
xtask/src/: build_ebpf.rs  main.rs  run.rs
