[package]
name = "fork-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-bpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
fork-common = { path = "../fork-common" }

[[bin]]
name = "fork"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = 2
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
debug = 2
panic = "abort"
codegen-units = 1

[workspace]
members = []
