[package]
name = "fork"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
fork-common = { path = "../fork-common", features=["user"] }
anyhow = "1.0.42"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.9"
log = "0.4"
libbpf-sys = "1.0"

[[bin]]
name = "fork"
path = "src/main.rs"
