[package]
name = "userspace-aya-ebpf-libbpf"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", branch = "main", features=["async_tokio"] }
fork-common = { path = "../fork-common", features=["user"] }
anyhow = "1.0.42"
env_logger = "0.9"
log = "0.4"
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }

[[bin]]
name = "userspace-aya-ebpf-libbpf"
path = "src/main.rs"
