[package]
name = "fork-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-bpf = { git = "https://github.com/vadorovsky/aya", branch = "btf-maps" }
aya-log-ebpf = { git = "https://github.com/vadorovsky/aya", branch = "btf-maps" }
fork-common = { path = "../../fork-common" }

[patch."https://github.com/aya-rs/aya"]
aya-bpf = { git = "https://github.com/vadorovsky/aya", branch = "btf-maps" }
aya-bpf-macros = { git = "https://github.com/vadorovsky/aya", branch = "btf-maps" }

[[bin]]
name = "fork"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = 2
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
debug = 2
panic = "abort"
codegen-units = 1

[target.bpfel-unknown-none]
rustflags = ["-C debuginfo=2"]

[workspace]
members = []
